Revert "trying to fix button bug"
This reverts commit 40bddb46e9965dc9d1bc2ead24dd1c8ac89dde8c.

I messed up the project

--- a/static/style.css
+++ b/static/style.css
@@ -28,7 +28,29 @@ h3, p {
     align-items: center;
 }
 
-.install-button{
+#first_Button{
+    background: white;
+    color: black;
+    border: 1px solid red;
+    height: 3rem;
+    margin: 3rem;
+    width: 9rem;
+    box-shadow: 1px 10px 10px rgb(63, 62, 62);
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background-color 250ms ease-in-out, transform 50ms ease-in-out;
+}
+
+#first_Button:active {
+    transform: scale(0.9);
+}
+#first_Button:hover{
+color:white;
+background-color: red;
+border: none;
+}
+
+#second_Button{
     background:red;
     color: white;
     height: 3rem;
@@ -41,6 +63,6 @@ h3, p {
     transition: background-color 250ms ease-in-out, transform 50ms ease-in-out;
 }
 
-.install-button:active {
+#second_Button:active {
     transform: scale(0.9);
 }
